--- a/style.css
+++ b/style.css
@@ -22,19 +22,19 @@ li:nth-child(6){
 li:nth-child(7){
     color:purple;
 }
-h3:nth-of-type(1){
+h3:nth-of-type(1):active{
     color:red;
 }
-h3:nth-of-type(2){
+h3:nth-of-type(2):active{
     color:yellow;
 }
-h3:nth-of-type(3){
+h3:nth-of-type(3):active{
     color:orange;
 }
-h3:nth-of-type(4){
+h3:nth-of-type(4):active{
     color:green;
 }
-h3:nth-of-type(5){
+h3:nth-of-type(5):active{
     color:blue;
 }
 
